--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -58,6 +58,11 @@ main {
   background-color: lightblue;
 }
 
+.second-sidebar a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .third-sidebar {
   height: 50px;
   border: 0.5px solid #808080;
@@ -71,6 +76,11 @@ main {
 
 .third-sidebar:hover {
   background-color: lightblue;
+}
+
+.third-sidebar a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .sidebar-content {
@@ -131,6 +141,11 @@ main {
   padding: 20px;
   border: 2px solid #ccc; /* 실선 효과 */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+}
+
+/* 로그 수 */
+.total-logs {
+  margin-right: 20px;
 }
 
 /* Table style */
