--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -58,6 +58,11 @@ main {
   background-color: lightblue;
 }
 
+.second-sidebar a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .third-sidebar {
   height: 50px;
   border: 0.5px solid #808080;
@@ -71,6 +76,11 @@ main {
 
 .third-sidebar:hover {
   background-color: lightblue;
+}
+
+.third-sidebar a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .sidebar-content {
@@ -134,6 +144,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* 회원 수 */
+.total-users {
+  margin-right: 20px;
 }
 
 /* Table style */
