--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -11,6 +11,14 @@ header {
   z-index: 1;
 }
 
+.logo {
+  width: 10%;
+  position: absolute;
+  left: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 main {
   background-color: lightgray;
   height: 900px;
