--- a/frontend/css/common.css
+++ b/frontend/css/common.css
@@ -1,34 +1,211 @@
-@import url("https://fonts.googleapis/css?family=Poppins:400,500,600,700&display=swap");
-* {
+/* 전체 화면을 꽉 채우도록 설정 */
+html,
+body {
+  height: 100%;
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
 #header {
-  height: 100px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  background: #efefef;
+  height: 80px;
+  background-color: lightgray;
+  display: flex;
+  align-items: center;
 }
 
-#side-bar-left {
-  height: 100%;
-  width: 20%;
-  background: #3c4b64;
-  float: left;
-}
-
-#main {
-  width: 80%;
-  height: 100%;
-  background: #f0f4f7;
-  float: left;
+.logo {
+  margin-left: 10px;
+  max-width: 40%;
+  max-height: 40%;
 }
 
 #footer {
-  clear: both;
-  background: #efefef;
+  position: fixed;
+  bottom: 0;
+  left: 0;
   width: 100%;
+  height: 80px;
+  background-color: lightgray;
+}
+
+main {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#side-bar {
+  position: fixed;
+  top: 80px;
+  left: 0;
+  width: 200px;
+  height: calc(100% - 160px); /* header와 footer의 높이를 제외한 공간을 차지 */
+  background-color: #3c4b64;
+}
+
+/* first-sidebar는 side-bar의 윗부분에서 너비는 200px, 세로길이는 100px */
+#first-sidebar {
+  position: absolute;
+  top: 0px;
+  width: 200px;
   height: 100px;
-  text-align: center;
+  background-color: #303c54;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+}
+
+/* second-sidebar는 first-sidebar보다 50px 아래에 위치하고 너비는 200px, 세로길이는 80px */
+#second-sidebar {
+  position: absolute;
+  top: 130px;
+  width: 200px;
+  height: 80px;
+  background-color: #3c4b64;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 14px;
+}
+
+.fa-solid {
+  margin-right: 10px;
+}
+
+#second-sidebar {
+  cursor: pointer;
+}
+
+#second-sidebar:hover {
+  background-color: #303c54;
+}
+
+/* third-sidebar는 second-sidebar 바로 아래에 위치하고 너비와 세로길이는 같음 */
+#third-sidebar {
+  position: absolute;
+  top: 210px; /* second-sidebar 아래에 위치 */
+  width: 200px;
+  height: 80px;
+  background-color: #3c4b64;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 14px;
+}
+
+#third-sidebar {
+  cursor: pointer;
+}
+
+#third-sidebar:hover {
+  background-color: #303c54;
+}
+
+/* body는 main에서 side-bar가 차지하는 부분의 나머지 영역을 차지 */
+#body {
+  margin-left: 200px; /* side-bar의 너비만큼 여백 추가 */
+}
+
+/* body-top은 body의 상단에 있고 높이는 50px */
+#body-top {
+  height: 20px;
+  background-color: lightpink; /* 원하는 배경색으로 변경하세요 */
+}
+
+/* body-bottom은 body에서 body-top이 차지하는 부분의 나머지 영역을 차지 */
+#body-bottom {
+  padding: 10px 10%; /* 좌우 여백은 10%, 상하 여백은 10px */
+}
+
+/* container-box는 body-bottom의 중앙의 100%를 차지하고 높이는 600px */
+#container-box {
+  padding: 10px 5%;
+  height: 600px;
+  margin: 0 auto; /* 가운데 정렬 */
+  border: 1px solid #d6d6d6; /* 실선으로 구분 */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
+  position: relative; /* 가상 요소의 위치 기준점 설정 */
+}
+
+#container-box::before {
+  content: ""; /* 가상 요소는 content 속성이 필요합니다 */
+  position: absolute; /* 부모 요소인 #container-box에 대해 절대 위치 */
+  top: -20px; /* 상단에서 20px 위에 위치 */
+  left: 0; /* 왼쪽 정렬 */
+  right: 0; /* 오른쪽 정렬 - 이를 통해 가로 너비를 부모와 동일하게 설정 */
+  border-top: 1px solid #d6d6d6; /* 상단에 실선 추가 */
+}
+
+/* container-box 내부의 줄들 */
+#total-count {
+  width: 10%;
+  height: 50px;
+  float: left;
+  background-color: lightblue; /* 원하는 배경색으로 변경하세요 */
+}
+
+#search-container {
+  width: 20%;
+  height: 50px;
+  float: right;
+  background-color: lightblue; /* 원하는 배경색으로 변경하세요 */
+}
+
+#searchInput::placeholder {
+  font-size: 12px;
+}
+
+.search-container input[type="text"] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 12px;
+  border: none;
+}
+
+.search-container button {
+  padding: 6px 6px;
+  margin-top: 8px;
+  margin-left: 5px;
+  background: #ddd;
+  font-size: 12px;
+  border: none;
+  cursor: pointer;
+}
+
+.search-container button:hover {
+  background: #ccc;
+}
+
+#my-table {
+  clear: both; /* float 해제 */
+  width: 100%;
+  height: calc(100% - 100px); /* container-box 높이에서 줄들의 높이 제외 */
+  background-color: lightgray; /* 원하는 배경색으로 변경하세요 */
+}
+
+#delete-area {
+  width: 10%;
+  height: 50px;
+  float: left;
+  background-color: yellow; /* 원하는 배경색으로 변경하세요 */
+}
+
+#register-area {
+  width: 10%;
+  height: 50px;
+  float: right;
+  background-color: yellow; /* 원하는 배경색으로 변경하세요 */
+}
+
+#pagination {
+  width: 80%;
+  height: 50px;
+  float: left;
+  background-color: blueviolet; /* 원하는 배경색으로 변경하세요 */
 }
