페이지네이션 가장 첫번째 페이지, 가장 마지막 페이지 이동 구현 (테스트 완)

--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -248,7 +248,7 @@ th {
   float: left;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   text-align: center;
   background-color: #ffffff;
 }
@@ -260,6 +260,7 @@ th {
 
 .pagination i {
   cursor: pointer;
+  margin: 0 1rem; /* 화살표와 번호 사이의 여백 조정 */
 }
 
 #numbers {
