--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -354,63 +354,24 @@ th {
   cursor: pointer;
 }
 
+#deleteModal {
+  display: none;
+  line-height: 1.5;
+}
+
+#deleteModal p {
+  font-size: 0.9em;
+  margin-bottom: 10px;
+}
+
 #deleteButton:hover {
   background-color: lightblue;
 }
 
-/* 삭제 모달 */
-/* .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+#confirmDeleteBtn {
+  background-color: #b81414; /* 빨간색으로 배경색을 설정합니다. */
+  color: white; /* 텍스트 색상을 흰색으로 설정합니다. */
 }
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.btn-container {
-  text-align: center;
-}
-
-.modal-buttons button {
-  padding: 10px 20px;
-  margin: 5px;
-  border: none;
-  cursor: pointer;
-}
-
-#confirmDeleteButton {
-  background-color: red;
-  color: white;
-}
-
-#cancelButton {
-  background-color: #ccc;
-} */
 
 /* 회원 등록 */
 #register-area {
