--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -159,7 +159,7 @@ main {
 
 /* 검색창 */
 #search-container {
-  width: 20%;
+  width: 16.125%;
   height: 20px;
   float: right;
   margin-bottom: 10px;
@@ -178,6 +178,8 @@ main {
 }
 
 .search-button {
+  width: 30px;
+  height: 30px;
   padding: 6px 6px;
   margin-top: 8px;
   margin-left: 0;
@@ -185,6 +187,10 @@ main {
   font-size: 12px;
   border: none;
   cursor: pointer;
+}
+
+.search-button i {
+  line-height: 30px;
 }
 
 .search-button:hover {
