--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -159,7 +159,7 @@ main {
 
 /* 검색창 */
 #search-container {
-  width: 20%;
+  width: 16.125%;
   height: 20px;
   float: right;
   margin-bottom: 10px;
@@ -178,6 +178,8 @@ main {
 }
 
 .search-button {
+  width: 30px;
+  height: 30px;
   padding: 6px 6px;
   margin-top: 8px;
   margin-left: 0;
@@ -185,6 +187,10 @@ main {
   font-size: 12px;
   border: none;
   cursor: pointer;
+}
+
+.search-button i {
+  line-height: 30px;
 }
 
 .search-button:hover {
@@ -279,12 +285,13 @@ th {
   margin-bottom: 20px;
   display: flex;
   align-items: center; /* 입력 필드와 레이블을 세로 중앙 정렬 */
-  justify-content: space-between; /* 입력 필드와 버튼을 좌우 정렬 */
+  justify-content: flex-start;
+  /* justify-content: space-between; 입력 필드와 버튼을 좌우 정렬 */
 }
 
 .input-container label {
   margin-right: 10px;
-  flex: 1; /* 레이블이 동적으로 크기 조정되도록 */
+  flex: 0 0 100px;
   text-align: right;
   font-size: 0.9em;
 }
@@ -302,6 +309,11 @@ th {
 .input-container button {
   padding: 3px 5px;
   cursor: pointer; /* 커서 포인터 효과 */
+}
+
+#checkDuplicate,
+#togglePassword {
+  flex: 0 0 auto; /* 버튼의 너비를 자동으로 설정하여 고정되지 않도록 합니다. */
 }
 
 #checkDuplicate {
