테이블 색상및 구조 변경, 유저 테이블에서 수정버튼 없에고 행 클릭시 상세정보모달

--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -3,6 +3,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  background-color: #f0f4f7;
 }
 
 /* 헤더 */
@@ -12,7 +13,7 @@ body {
   left: 0;
   width: 100%;
   height: 80px;
-  background-color: lightgray;
+  background-color: #efefef;
   display: flex;
   align-items: center;
 }
@@ -58,7 +59,7 @@ main {
   top: 130px;
   width: 200px;
   height: 80px;
-  background-color: #3c4b64;
+  background-color: #798291;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -75,7 +76,7 @@ main {
 }
 
 #second-sidebar:hover {
-  background-color: #303c54;
+  background-color: #798291;
 }
 
 /* 세번째 사이드바 */
@@ -97,19 +98,22 @@ main {
 }
 
 #third-sidebar:hover {
-  background-color: #303c54;
+  background-color: #798291;
 }
 
 #body {
   margin-left: 200px;
+  background-color: #f0f4f7;
 }
 
 #body-top {
   height: 20px;
+  background-color: #f0f4f7;
 }
 
 #body-bottom {
   padding: 10px 10%;
+  background-color: #f0f4f7;
 }
 
 /* 경로표시 */
@@ -137,6 +141,7 @@ main {
   border: 2px solid #d6d6d6;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   position: relative;
+  background-color: white;
 }
 
 /* 컨테이너박스 상단 줄 */
@@ -198,18 +203,35 @@ main {
 }
 
 /* 유저 테이블 */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+}
+
 #my-table {
   clear: both;
   width: 100%;
   height: calc(100% - 120px);
-  background-color: lightgray;
+}
+
+thead th {
+  background-color: ##efefef;
+  font-weight: bold;
 }
 
 td,
 th {
   text-align: left;
-  padding: 0.5rem 1rem;
+  padding: 8px;
+  /* padding: 0.5rem 1rem; */
   height: calc(100% / 10);
+}
+
+#my-table tbody tr {
+  cursor: pointer;
+  background-color: #fff; /* 모든 행을 흰색으로 설정 */
+  border-bottom: 1px solid #ccc; /* 행 사이에 실선으로 구분 */
 }
 
 tbody tr:nth-child(odd) {
@@ -217,8 +239,8 @@ tbody tr:nth-child(odd) {
 }
 
 th {
-  background-color: #444;
-  color: #fff;
+  background-color: #efefef;
+  color: #black;
 }
 
 .col1 {
@@ -233,14 +255,11 @@ th {
 .col4 {
   width: 20%;
 }
-.col5 {
-  width: 1%;
-}
 
 /* 회원 가입 */
 #register-button {
   color: white;
-  background-color: #303c54;
+  background-color: #002b49;
   cursor: pointer;
 }
 
@@ -254,6 +273,18 @@ th {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.8); /* 배경 어둡게 */
+}
+
+.modifyModal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: transparent;
 }
 
 .close {
@@ -331,7 +362,7 @@ th {
   margin-top: 40px;
 }
 
-#cancelBtn {
+#registercancelBtn {
   flex-grow: 0; /* 버튼이 더 이상 확장되지 않도록 설정 */
 }
 
@@ -340,9 +371,19 @@ th {
   margin-left: auto; /* 오른쪽으로 이동하여 우측에 위치하도록 설정 */
 }
 
+#modifycancelBtn {
+  flex-grow: 0;
+}
+
 #modifyBtn {
   flex-grow: 0;
   margin-left: auto;
+  color: white;
+  background-color: #002b49;
+  cursor: pointer;
+}
+modifyModal #modifyModal {
+  display: none; /* 기본적으로 숨김 */
 }
 
 /* 회원정보 수정 */
@@ -445,7 +486,7 @@ th {
   left: 0;
   width: 100%;
   height: 80px;
-  background-color: lightgray;
+  background-color: #efefef;
   display: flex;
   align-items: center;
   justify-content: center;
