--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -3,6 +3,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  background-color: #f0f4f7;
 }
 
 /* 헤더 */
@@ -12,7 +13,7 @@ body {
   left: 0;
   width: 100%;
   height: 80px;
-  background-color: lightgray;
+  background-color: #efefef;
   display: flex;
   align-items: center;
 }
@@ -75,7 +76,7 @@ main {
 }
 
 #second-sidebar:hover {
-  background-color: #303c54;
+  background-color: #798291;
 }
 
 /* 세번째 사이드바 */
@@ -84,7 +85,7 @@ main {
   top: 210px;
   width: 200px;
   height: 80px;
-  background-color: #3c4b64;
+  background-color: #798291;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,7 +98,7 @@ main {
 }
 
 #third-sidebar:hover {
-  background-color: #303c54;
+  background-color: #798291;
 }
 
 #body {
@@ -106,10 +107,12 @@ main {
 
 #body-top {
   height: 20px;
+  background-color: #f0f4f7;
 }
 
 #body-bottom {
   padding: 10px 10%;
+  background-color: #f0f4f7;
 }
 
 /* 경로표시 */
@@ -137,6 +140,7 @@ main {
   border: 2px solid #d6d6d6;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   position: relative;
+  background-color: white;
 }
 
 /* 컨테이너박스 상단 줄 */
@@ -197,18 +201,35 @@ main {
   background: #ccc;
 }
 
-/* 유저 테이블 */
+/* 로그 테이블 */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+}
+
 #my-table {
   clear: both;
   width: 100%;
   height: calc(100% - 120px);
-  background-color: lightgray;
+}
+
+thead th {
+  background-color: ##efefef;
+  font-weight: bold;
 }
 
 td,
 th {
   text-align: left;
-  padding: 0.5rem 1rem;
+  padding: 8px;
+  /* padding: 0.5rem 1rem; */
+  height: calc(100% / 10);
+}
+
+#my-table tbody tr {
+  background-color: #fff; /* 모든 행을 흰색으로 설정 */
+  border-bottom: 1px solid #ccc; /* 행 사이에 실선으로 구분 */
 }
 
 tbody tr:nth-child(odd) {
@@ -216,10 +237,9 @@ tbody tr:nth-child(odd) {
 }
 
 th {
-  background-color: #444;
-  color: #fff;
+  background-color: #efefef;
+  color: #black;
 }
-
 .col1 {
   width: 5%;
 }
@@ -300,7 +320,7 @@ th {
   left: 0;
   width: 100%;
   height: 80px;
-  background-color: lightgray;
+  background-color: #efefef;
   display: flex;
   align-items: center;
   justify-content: center;
