--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -136,7 +136,7 @@ main {
 /* 컨테이너 박스 */
 #container-box {
   padding: 10px 5%;
-  height: 600px;
+  height: 800px;
   margin: 0 auto;
   border: 2px solid #d6d6d6;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -159,15 +159,17 @@ main {
   width: 10%;
   height: 20px;
   float: left;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 /* 검색창 */
 #search-container {
-  width: 16.125%;
+  width: 14%;
   height: 20px;
   float: right;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 #searchInput::placeholder {
@@ -212,7 +214,7 @@ table {
 #my-table {
   clear: both;
   width: 100%;
-  height: calc(100% - 120px);
+  height: calc(100% - 360px);
 }
 
 thead th {
@@ -261,6 +263,8 @@ th {
   color: white;
   background-color: #002b49;
   cursor: pointer;
+  width: 70px; /* 가로 길이 */
+  height: 36px; /* 세로 길이 */
 }
 
 .modal {
@@ -284,7 +288,7 @@ th {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .close {
@@ -382,8 +386,13 @@ th {
   background-color: #002b49;
   cursor: pointer;
 }
-modifyModal #modifyModal {
+
+.modifyModal #modifyModal {
   display: none; /* 기본적으로 숨김 */
+}
+
+.modifyModal[style="display: none"] + .modal {
+  background-color: rgba(0, 0, 0, 0);
 }
 
 /* 회원정보 수정 */
@@ -405,6 +414,8 @@ modifyModal #modifyModal {
 #delete-button {
   background-color: #ddd;
   cursor: pointer;
+  width: 70px; /* 가로 길이 */
+  height: 36px; /* 세로 길이 */
 }
 
 #deleteModal {
