--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -16,6 +16,7 @@ body {
   background-color: #efefef;
   display: flex;
   align-items: center;
+  z-index: 1000;
 }
 
 .logo {
@@ -31,7 +32,7 @@ main {
 
 /* 전체 사이드바 */
 #side-bar {
-  position: fixed;
+  position: absolute;
   top: 80px;
   left: 0;
   width: 200px;
@@ -85,7 +86,7 @@ main {
   top: 210px;
   width: 200px;
   height: 80px;
-  background-color: #798291;
+  background-color: #h-container798291;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,7 +107,7 @@ main {
 }
 
 #body-top {
-  height: 20px;
+  height: 30px;
   background-color: #f0f4f7;
 }
 
@@ -141,6 +142,7 @@ main {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   position: relative;
   background-color: white;
+  min-width: 1600px;
 }
 
 /* 컨테이너박스 상단 줄 */
@@ -164,15 +166,42 @@ main {
 
 /* 검색창 */
 #search-container {
-  width: 14%;
+  width: 15%;
   height: 20px;
   float: right;
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
+#search-box {
+  position: relative;
+  width: 250px;
+}
+
+#magnifier {
+  display: flex;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  left: 10px;
+}
+
+#magnifier i {
+  display: inline-block;
+  position: absolute;
+  right: 0; /* 오른쪽 끝에 위치 */
+  font-size: 1.3em;
+}
+
+#searchInput {
+  width: 230px;
+  height: 30px;
+  font-size: 16px;
+  border: solid 1px rgba(0, 0, 0, 0.8);
+}
+
 #searchInput::placeholder {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .search-container input[type="text"] {
@@ -183,24 +212,8 @@ main {
   border: none;
 }
 
-.search-button {
-  width: 30px;
-  height: 30px;
-  padding: 6px 6px;
-  margin-top: 8px;
-  margin-left: 0;
-  background: #ddd;
-  font-size: 12px;
-  border: none;
+#search-button {
   cursor: pointer;
-}
-
-.search-button i {
-  line-height: 30px;
-}
-
-.search-button:hover {
-  background: #ccc;
 }
 
 /* 로그 테이블 */
@@ -312,7 +325,7 @@ th {
 #numbers li a.active {
   opacity: 1;
   background: #2387e5;
-  color: #333;
+  color: white;
 }
 
 /* 푸터 */
@@ -326,4 +339,5 @@ th {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 }
