--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -31,11 +31,11 @@ main {
 
 /* 전체 사이드바 */
 #side-bar {
-  position: fixed;
+  position: absolute;
   top: 80px;
   left: 0;
   width: 200px;
-  height: calc(100% - 160px);
+  height: calc(100%);
   background-color: #3c4b64;
 }
 
@@ -107,7 +107,7 @@ main {
 }
 
 #body-top {
-  height: 20px;
+  height: 30px;
   background-color: #f0f4f7;
 }
 
@@ -142,6 +142,7 @@ main {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   position: relative;
   background-color: white;
+  min-width: 1600px;
 }
 
 /* 컨테이너박스 상단 줄 */
@@ -165,15 +166,42 @@ main {
 
 /* 검색창 */
 #search-container {
-  width: 14%;
+  width: 15%;
   height: 20px;
   float: right;
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
+#search-box {
+  position: relative;
+  width: 250px;
+}
+
+#magnifier {
+  display: flex;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  left: 10px;
+}
+
+#magnifier i {
+  display: inline-block;
+  position: absolute;
+  right: 0; /* 오른쪽 끝에 위치 */
+  font-size: 1.3em;
+}
+
+#searchInput {
+  width: 230px;
+  height: 30px;
+  font-size: 16px;
+  border: solid 1px rgba(0, 0, 0, 0.8);
+}
+
 #searchInput::placeholder {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .search-container input[type="text"] {
@@ -184,24 +212,8 @@ main {
   border: none;
 }
 
-.search-button {
-  width: 30px;
-  height: 30px;
-  padding: 6px 6px;
-  margin-top: 8px;
-  margin-left: 0;
-  background: #ddd;
-  font-size: 12px;
-  border: none;
+#search-button {
   cursor: pointer;
-}
-
-.search-button i {
-  line-height: 30px;
-}
-
-.search-button:hover {
-  background: #ccc;
 }
 
 /* 유저 테이블 */
@@ -377,6 +389,9 @@ th {
 
 #modifycancelBtn {
   flex-grow: 0;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
 }
 
 #modifyBtn {
@@ -385,6 +400,25 @@ th {
   color: white;
   background-color: #002b49;
   cursor: pointer;
+  width: 60px;
+  height: 25px;
+}
+
+#modifyCancelBtn {
+  flex-grow: 0;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
+}
+
+#modifyBtnConfirm {
+  flex-grow: 0;
+  margin-left: auto;
+  color: white;
+  background-color: #002b49;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
 }
 
 .modifyModal #modifyModal {
@@ -432,9 +466,18 @@ th {
   background-color: lightblue;
 }
 
+#cancelDeleteBtn {
+  flex-grow: 0;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
+}
+
 #confirmDeleteBtn {
   background-color: #b81414; /* 빨간색으로 배경색을 설정합니다. */
   color: white; /* 텍스트 색상을 흰색으로 설정합니다. */
+  width: 60px;
+  height: 25px;
 }
 
 /* 회원 등록 */
@@ -487,7 +530,7 @@ th {
 #numbers li a.active {
   opacity: 1;
   background: #2387e5;
-  color: #333;
+  color: white;
 }
 
 /* 푸터 */
