--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -16,6 +16,8 @@ body {
   background-color: #efefef;
   display: flex;
   align-items: center;
+  transition: top 0.3s;
+  z-index: 1;
 }
 
 .logo {
@@ -175,7 +177,7 @@ main {
 
 #search-box {
   position: relative;
-  width: 250px;
+  width: 260px;
 }
 
 #magnifier {
@@ -194,7 +196,7 @@ main {
 }
 
 #searchInput {
-  width: 230px;
+  width: 240px;
   height: 30px;
   font-size: 16px;
   border: solid 1px rgba(0, 0, 0, 0.8);
@@ -326,6 +328,12 @@ th {
   max-width: 400px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); /* 그림자 효과 */
+}
+
+.modal-content p {
+  color: #b81414;
+  font-size: 12px;
+  text-align: left;
 }
 
 .input-container {
@@ -550,4 +558,6 @@ th {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: bottom 0.3s;
+  z-index: 1;
 }
