--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -36,7 +36,7 @@ main {
   position: absolute;
   top: 80px;
   left: 0;
-  width: 200px;
+  width: 250px;
   height: calc(100%);
   background-color: #3c4b64;
 }
@@ -45,7 +45,7 @@ main {
 #first-sidebar {
   position: absolute;
   top: 0px;
-  width: 200px;
+  width: 250px;
   height: 100px;
   background-color: #303c54;
   display: flex;
@@ -59,7 +59,7 @@ main {
 #second-sidebar {
   position: absolute;
   top: 130px;
-  width: 200px;
+  width: 250px;
   height: 80px;
   background-color: #3c4b64;
   display: flex;
@@ -85,7 +85,7 @@ main {
 #third-sidebar {
   position: absolute;
   top: 210px;
-  width: 200px;
+  width: 250px;
   height: 80px;
   background-color: #798291;
   display: flex;
@@ -104,7 +104,7 @@ main {
 }
 
 #body {
-  margin-left: 200px;
+  margin-left: 250px;
 }
 
 #body-top {
@@ -167,7 +167,7 @@ main {
 
 /* 검색창 */
 #search-container {
-  width: 15%;
+  width: 17.25%;
   height: 20px;
   float: right;
   margin-top: 30px;
@@ -176,7 +176,7 @@ main {
 
 #search-box {
   position: relative;
-  width: 260px;
+  width: 300px;
 }
 
 #magnifier {
@@ -195,7 +195,7 @@ main {
 }
 
 #searchInput {
-  width: 240px;
+  width: 280px;
   height: 30px;
   font-size: 16px;
   border: solid 1px rgba(0, 0, 0, 0.8);
@@ -256,17 +256,22 @@ th {
   background-color: #efefef;
   color: #black;
 }
+
+#log-table-body tr:hover {
+  background-color: #f5f5f5; /* 마우스를 올렸을 때 배경색 변경 */
+}
+
 .col1 {
   width: 10%;
 }
 .col2 {
-  width: 10%;
-}
-.col3 {
   width: 15%;
 }
+.col3 {
+  width: 20%;
+}
 .col4 {
-  width: 65%;
+  width: 55%;
 }
 
 /* 좌측하단 여백 */
