--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -36,7 +36,7 @@ main {
   position: absolute;
   top: 80px;
   left: 0;
-  width: 200px;
+  width: 250px;
   height: calc(100%);
   background-color: #3c4b64;
 }
@@ -45,7 +45,7 @@ main {
 #first-sidebar {
   position: absolute;
   top: 0px;
-  width: 200px;
+  width: 250px;
   height: 100px;
   background-color: #303c54;
   display: flex;
@@ -59,7 +59,7 @@ main {
 #second-sidebar {
   position: absolute;
   top: 130px;
-  width: 200px;
+  width: 250px;
   height: 80px;
   background-color: #798291;
   display: flex;
@@ -85,7 +85,7 @@ main {
 #third-sidebar {
   position: absolute;
   top: 210px;
-  width: 200px;
+  width: 250px;
   height: 80px;
   background-color: #3c4b64;
   display: flex;
@@ -104,7 +104,7 @@ main {
 }
 
 #body {
-  margin-left: 200px;
+  margin-left: 250px;
   background-color: #f0f4f7;
 }
 
@@ -168,7 +168,7 @@ main {
 
 /* 검색창 */
 #search-container {
-  width: 15%;
+  width: 17.25%;
   height: 20px;
   float: right;
   margin-top: 30px;
@@ -177,7 +177,7 @@ main {
 
 #search-box {
   position: relative;
-  width: 260px;
+  width: 300px;
 }
 
 #magnifier {
@@ -196,7 +196,7 @@ main {
 }
 
 #searchInput {
-  width: 240px;
+  width: 280px;
   height: 30px;
   font-size: 16px;
   border: solid 1px rgba(0, 0, 0, 0.8);
@@ -257,6 +257,10 @@ tbody tr:nth-child(odd) {
 th {
   background-color: #efefef;
   color: #black;
+}
+
+#user-table-body tr:hover {
+  background-color: #f5f5f5; /* 마우스를 올렸을 때 배경색 변경 */
 }
 
 .col1 {
