스웨거API 적용

--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -21,7 +21,7 @@ body {
 }
 
 .logo {
-  margin-left: 10px;
+  margin-left: 30px;
   max-width: 40%;
   max-height: 40%;
 }
@@ -52,7 +52,8 @@ main {
   justify-content: center;
   align-items: center;
   color: white;
-  font-size: 24px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 /* 두번째 사이드바 */
@@ -60,7 +61,7 @@ main {
   position: absolute;
   top: 130px;
   width: 250px;
-  height: 80px;
+  height: 54px;
   background-color: #3c4b64;
   display: flex;
   justify-content: center;
@@ -84,9 +85,9 @@ main {
 /* 세번째 사이드바 */
 #third-sidebar {
   position: absolute;
-  top: 210px;
+  top: 184px;
   width: 250px;
-  height: 80px;
+  height: 54px;
   background-color: #798291;
   display: flex;
   justify-content: center;
@@ -108,7 +109,7 @@ main {
 }
 
 #body-top {
-  height: 30px;
+  height: 20px;
   background-color: #f0f4f7;
 }
 
@@ -119,13 +120,13 @@ main {
 
 /* 경로표시 */
 #first-breadcrumb {
-  font-size: 26px;
+  font-size: 32px;
   font-weight: bold;
   margin-right: 15px;
 }
 
 #second-breadcrumb {
-  font-size: 12px;
+  font-size: 14px;
   color: gray;
 }
 
@@ -143,14 +144,14 @@ main {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   position: relative;
   background-color: white;
-  min-width: 1600px;
+  min-width: 1520px;
 }
 
 /* 컨테이너박스 상단 줄 */
 #container-box::before {
   content: "";
   position: absolute;
-  top: -20px;
+  top: -30px;
   left: 0;
   right: 0;
   border-top: 1px solid #d6d6d6;
