--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -169,7 +169,7 @@ main {
 
 /* 검색창 */
 #search-container {
-  width: 17.25%;
+  /* width: 17.25%; */
   height: 20px;
   float: right;
   margin-top: 30px;
@@ -179,6 +179,7 @@ main {
 #search-box {
   position: relative;
   width: 300px;
+  box-sizing: border-box;
 }
 
 #magnifier {
@@ -197,7 +198,7 @@ main {
 }
 
 #searchInput {
-  width: 280px;
+  width: 300px;
   height: 30px;
   font-size: 16px;
   border: solid 1px rgba(0, 0, 0, 0.8);
