--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -13,11 +13,13 @@ body {
   left: 0;
   width: 100%;
   height: 80px;
-  background-color: #efefef;
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   transition: top 0.3s;
   z-index: 1;
+  box-sizing: border-box;
+  border: 1px solid #d6d6d6;
 }
 
 .logo {
@@ -31,6 +33,7 @@ main {
   position: absolute;
   width: 100%;
   top: 80px;
+  bottom: 80px;
 }
 
 /* 전체 사이드바 */
@@ -95,6 +98,9 @@ main {
   align-items: center;
   color: white;
   font-size: 14px;
+  box-sizing: border-box;
+  border: 1px solid #000000;
+  padding: 10px;
 }
 
 #third-sidebar {
