--- a/frontend/css/users.css
+++ b/frontend/css/users.css
@@ -1,36 +1,52 @@
 /* 전체 화면을 꽉 채우도록 설정 */
 html,
 body {
-  height: 100%;
   margin: 0;
+  padding: 0;
+  /* height: 100%; */
+  /* width: 100%; */
   background-color: #f0f4f7;
 }
 
+body {
+  /* min-height: 100vh;
+  display: flex;
+  flex-direction: column; */
+  padding-bottom: 80px;
+}
+/* 
+.wrapper {
+  height: auto;
+  min-height: 100%;
+  padding-bottom: 80px;
+} */
+
 /* 헤더 */
 #header {
-  position: fixed;
+  position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 80px;
-  background-color: #efefef;
-  display: flex;
+  background-color: #ffffff;
   align-items: center;
-  transition: top 0.3s;
-  z-index: 1;
+  box-sizing: border-box;
+  border: 1px solid #d6d6d6;
 }
 
 .logo {
+  margin-top: 25px;
   margin-left: 30px;
   max-width: 40%;
   max-height: 40%;
 }
 
 main {
-  padding-bottom: 160px;
+  /* padding-bottom: 80px; */
   position: absolute;
   width: 100%;
   top: 80px;
+  /* bottom: 80px; */
+  min-height: calc(100% - 160px);
 }
 
 /* 전체 사이드바 */
@@ -69,14 +85,14 @@ main {
   align-items: center;
   color: white;
   font-size: 14px;
+  box-sizing: border-box;
+  border: 1px solid #000000;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .fa-solid {
   margin-right: 10px;
-}
-
-#second-sidebar {
-  cursor: pointer;
 }
 
 #second-sidebar:hover {
@@ -95,9 +111,6 @@ main {
   align-items: center;
   color: white;
   font-size: 14px;
-}
-
-#third-sidebar {
   cursor: pointer;
 }
 
@@ -105,18 +118,17 @@ main {
   background-color: #798291;
 }
 
-#body {
+#body-all {
   margin-left: 250px;
+  top: 80px;
+  padding-bottom: 80px;
   background-color: #f0f4f7;
-}
-
-#body-top {
-  height: 20px;
-  background-color: #f0f4f7;
+  /* height: calc(100% + 80px); */
 }
 
 #body-bottom {
-  padding: 10px 10%;
+  padding: 40px 75px;
+  /* padding: 35px 75px; */
   background-color: #f0f4f7;
 }
 
@@ -125,26 +137,30 @@ main {
   font-size: 32px;
   font-weight: bold;
   margin-right: 15px;
+  /* margin-bottom: 30px; */
 }
 
 #second-breadcrumb {
   font-size: 14px;
   color: gray;
+  /* margin-bottom: 30px; */
 }
 
 #first-breadcrumb,
 #second-breadcrumb {
   display: inline;
+  /* margin-bottom: 30px; */
 }
 
 /* 컨테이너 박스 */
 #container-box {
-  padding: 10px 5%;
-  height: 800px;
-  margin: 0 auto;
+  padding: 20px 5%;
+  height: 690px;
+  margin: 20px 0 auto;
+  margin-top: 50px;
   border: 2px solid #d6d6d6;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  position: relative;
+  position: absolute;
   background-color: white;
   min-width: 1520px;
 }
@@ -159,6 +175,10 @@ main {
   border-top: 1px solid #d6d6d6;
 }
 
+#inner-box {
+  box-sizing: border-box;
+}
+
 /* 전체 유저 수 */
 #total-users {
   width: 10%;
@@ -170,25 +190,29 @@ main {
 
 /* 검색창 */
 #search-container {
-  /* width: 17.25%; */
   height: 20px;
   float: right;
   margin-top: 30px;
   margin-bottom: 30px;
+  box-sizing: border-box;
+}
+
+#total-users,
+#search-container {
+  display: inline;
 }
 
 #search-box {
   position: relative;
-  width: 300px;
-  box-sizing: border-box;
+  width: 100%;
 }
 
 #magnifier {
   display: flex;
   position: absolute;
   top: 5px;
-  right: 10px;
-  left: 10px;
+  right: 0;
+  left: 20px;
 }
 
 #magnifier i {
@@ -202,6 +226,7 @@ main {
   width: 300px;
   height: 30px;
   font-size: 16px;
+  margin-left: 0;
   border: solid 1px rgba(0, 0, 0, 0.8);
 }
 
@@ -212,7 +237,7 @@ main {
 .search-container input[type="text"] {
   padding: 6px;
   margin-top: 8px;
-  margin-right: 0;
+  margin-left: 0;
   font-size: 12px;
   border: none;
 }
@@ -231,7 +256,7 @@ table {
 #my-table {
   clear: both;
   width: 100%;
-  height: calc(100% - 360px);
+  height: 400px;
 }
 
 thead th {
@@ -241,7 +266,7 @@ thead th {
 
 td,
 th {
-  text-align: left;
+  text-align: center;
   padding: 8px;
   /* padding: 0.5rem 1rem; */
   height: calc(100% / 10);
@@ -251,6 +276,7 @@ th {
   cursor: pointer;
   background-color: #fff; /* 모든 행을 흰색으로 설정 */
   border-bottom: 1px solid #ccc; /* 행 사이에 실선으로 구분 */
+  text-align: center;
 }
 
 tbody tr:nth-child(odd) {
@@ -262,20 +288,21 @@ th {
   color: #black;
 }
 
+#user-table-body td {
+  text-align: center;
+}
+
 #user-table-body tr:hover {
-  background-color: #f5f5f5; /* 마우스를 올렸을 때 배경색 변경 */
+  background-color: #f5f5f5;
 }
 
 .col1 {
-  width: 9%;
+  width: 5%;
 }
 .col2 {
-  width: 18%;
+  width: 15%;
 }
 .col3 {
-  width: 16%;
-}
-.col4 {
   width: 20%;
 }
 
@@ -348,7 +375,6 @@ th {
   display: flex;
   align-items: center; /* 입력 필드와 레이블을 세로 중앙 정렬 */
   justify-content: flex-start;
-  /* justify-content: space-between; 입력 필드와 버튼을 좌우 정렬 */
 }
 
 .input-container label {
@@ -464,6 +490,7 @@ th {
   width: 5%;
   height: 50px;
   float: left;
+  margin-top: 25px;
 }
 
 #delete-button {
@@ -503,9 +530,10 @@ th {
 
 /* 회원 등록 */
 #register-area {
-  width: 5%;
+  margin-left: 0;
   height: 50px;
   float: right;
+  margin-top: 25px;
 }
 
 /* 페이지네이션 */
@@ -518,6 +546,7 @@ th {
   justify-content: center;
   text-align: center;
   background-color: #ffffff;
+  margin-top: 20px;
 }
 
 .pagination span {
@@ -554,17 +583,29 @@ th {
   color: white;
 }
 
+#delete-area #register-area {
+  display: inline;
+  margin-top: 20px;
+}
+
 /* 푸터 */
 #footer {
-  position: fixed;
-  bottom: 0;
+  position: absolute;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: 80px;
   background-color: #efefef;
+  box-sizing: border-box;
+  border: 1px solid #d6d6d6;
+  /* transform: translateY(-100%); */
+}
+
+#footer p {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: bottom 0.3s;
-  z-index: 1;
+  font-size: 14px;
+  height: 100%;
+  margin: 0;
 }
