--- a/frontend/css/common.css
+++ b/frontend/css/common.css
@@ -1,39 +1,56 @@
 * {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  position: relative;
+.wrapper {
+  height: auto;
+  min-height: 100%;
   padding-bottom: 80px;
-  min-height: 100vh;
 }
 
 header {
-  text-align: center;
-  background-color: #333;
-  color: #fff;
-  padding: 40px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 80px;
+  background-color: #ffffff;
+  align-items: center;
+  border: 1px solid #d6d6d6;
 }
 
-ul {
-  margin-left: 0;
+.logo {
 }
 
-main {
-  width: 90vw;
-  margin: 0 auto;
-  min-height: calc(100vh - 160px);
-}
+/* main {
+  position: absolute;
+  top: 80px;
+  bottom: 80px;
+  width: 100%;
+} */
+
+/* ul {
+  position: absolute;
+  left: 0;
+  width: 250px;
+  height: 100%;
+  background-color: #3c4b64;
+} */
+
+/* section {
+  position: absolute;
+  left: 250px;
+  right: 0;
+  height: 100%;
+  background-color: #f0f4f7;
+} */
 
 footer {
-  text-align: center;
-  background-color: #333;
-  color: #fff;
-  padding: 40px;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  height: 80px;
+  background-color: #efefef;
+  position: relative;
+  transform: translateY(-100%);
 }
