--- a/frontend/css/logs.css
+++ b/frontend/css/logs.css
@@ -1,43 +1,51 @@
 /* 전체 화면을 꽉 채우도록 설정 */
+
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
-  height: 100%;
   margin: 0;
+  padding: 0;
   background-color: #f0f4f7;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  padding-bottom: 80px;
+  min-height: 100vh;
+}
+
 /* 헤더 */
-#header {
-  position: fixed;
+header {
+  position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 80px;
   background-color: #ffffff;
-  display: flex;
   align-items: center;
-  transition: top 0.3s;
-  z-index: 1;
   box-sizing: border-box;
   border: 1px solid #d6d6d6;
 }
 
 .logo {
+  margin-top: 25px;
   margin-left: 30px;
   max-width: 40%;
   max-height: 40%;
 }
 
 main {
-  padding-bottom: 160px;
   position: absolute;
   width: 100%;
   top: 80px;
-  bottom: 80px;
+  min-height: calc(100% - 160px);
 }
 
 /* 전체 사이드바 */
-#side-bar {
+ul {
   position: absolute;
   left: 0;
   width: 250px;
@@ -72,14 +80,11 @@ main {
   align-items: center;
   color: white;
   font-size: 14px;
+  cursor: pointer;
 }
 
 .fa-solid {
   margin-right: 10px;
-}
-
-#second-sidebar {
-  cursor: pointer;
 }
 
 #second-sidebar:hover {
@@ -101,9 +106,6 @@ main {
   box-sizing: border-box;
   border: 1px solid #000000;
   padding: 10px;
-}
-
-#third-sidebar {
   cursor: pointer;
 }
 
@@ -111,17 +113,13 @@ main {
   background-color: #798291;
 }
 
-#body {
-  margin-left: 250px;
-}
-
-#body-top {
-  height: 20px;
-  background-color: #f0f4f7;
-}
-
-#body-bottom {
-  padding: 10px 10%;
+section {
+  position: absolute;
+  top: 0;
+  left: 250px;
+  padding: 40px 75px 80px;
+  bottom: 0;
+  min-width: 1800px;
   background-color: #f0f4f7;
 }
 
@@ -144,14 +142,18 @@ main {
 
 /* 컨테이너 박스 */
 #container-box {
-  padding: 10px 5%;
+  padding: 20px 5%;
   height: 800px;
-  margin: 0 auto;
+  min-height: 690px;
+  margin: 20px 0 auto;
+  margin-top: 50px;
   border: 2px solid #d6d6d6;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  position: relative;
-  background-color: white;
+  position: absolute;
+  background-color: #ffffff;
   min-width: 1520px;
+  display: flex;
+  flex-direction: column;
 }
 
 /* 컨테이너박스 상단 줄 */
@@ -162,6 +164,10 @@ main {
   left: 0;
   right: 0;
   border-top: 1px solid #d6d6d6;
+}
+
+#inner-box {
+  box-sizing: border-box;
 }
 
 /* 전체 로그 수 */
@@ -175,25 +181,29 @@ main {
 
 /* 검색창 */
 #search-container {
-  /* width: 17.25%; */
   height: 20px;
   float: right;
   margin-top: 30px;
   margin-bottom: 30px;
+  box-sizing: border-box;
+}
+
+#total-logs,
+#search-container {
+  display: inline;
 }
 
 #search-box {
   position: relative;
-  width: 300px;
-  box-sizing: border-box;
+  width: 100%;
 }
 
 #magnifier {
   display: flex;
   position: absolute;
   top: 5px;
-  right: 10px;
-  left: 10px;
+  right: 0;
+  left: 20px;
 }
 
 #magnifier i {
@@ -207,6 +217,7 @@ main {
   width: 300px;
   height: 30px;
   font-size: 16px;
+  margin-left: 0;
   border: solid 1px rgba(0, 0, 0, 0.8);
 }
 
@@ -236,11 +247,11 @@ table {
 #my-table {
   clear: both;
   width: 100%;
-  height: calc(100% - 360px);
+  height: 400px;
 }
 
 thead th {
-  background-color: ##efefef;
+  background-color: #efefef;
   font-weight: bold;
 }
 
@@ -248,13 +259,12 @@ td,
 th {
   text-align: left;
   padding: 8px;
-  /* padding: 0.5rem 1rem; */
-  height: calc(100% / 10);
+  /* height: calc(100% / 10); */
 }
 
 #my-table tbody tr {
-  background-color: #fff; /* 모든 행을 흰색으로 설정 */
-  border-bottom: 1px solid #ccc; /* 행 사이에 실선으로 구분 */
+  background-color: #fff;
+  border-bottom: 1px solid #ccc;
 }
 
 tbody tr:nth-child(odd) {
@@ -270,6 +280,10 @@ th {
   background-color: #f5f5f5; /* 마우스를 올렸을 때 배경색 변경 */
 }
 
+#log-table-body td {
+  height: 14px;
+}
+
 .col1 {
   width: 10%;
 }
@@ -283,30 +297,22 @@ th {
   width: 55%;
 }
 
-/* 좌측하단 여백 */
-#left-area {
-  width: 5%;
-  height: 50px;
-  float: left;
-}
-
-/* 우측하단 여백 */
-#right-area {
-  width: 5%;
-  height: 50px;
-  float: right;
+#bottom-controls {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
 }
 
 /* 페이지네이션 */
 #pagination {
-  width: 89%;
-  height: 50px;
-  float: left;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   background-color: #ffffff;
+  margin: 0 auto;
 }
 
 .pagination span {
@@ -344,16 +350,22 @@ th {
 }
 
 /* 푸터 */
-#footer {
-  position: fixed;
-  bottom: 0;
+footer {
+  position: absolute;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: 80px;
   background-color: #efefef;
+  box-sizing: border-box;
+  border: 1px solid #d6d6d6;
+}
+
+footer p {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: bottom 0.3s;
-  z-index: 1;
+  font-size: 14px;
+  height: 100%;
+  margin: 0;
 }
