--- a/frontend/static/SPA/css/users-copy.css
+++ b/frontend/static/SPA/css/users-copy.css
@@ -83,7 +83,6 @@ ul {
   color: white;
   font-size: 14px;
   box-sizing: border-box;
-  border: 1px solid #000000;
   padding: 10px;
   cursor: pointer;
 }
@@ -562,7 +561,7 @@ th {
   padding: 0;
   margin: 0 2rem;
   list-style-type: none;
-  display: flex;
+  display: flex;r
 }
 
 #numbers li a {
