--- a/frontend/static/css/users.css
+++ b/frontend/static/css/users.css
@@ -1,139 +1,464 @@
-/* 전체 화면을 꽉 채우도록 설정 */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  min-height: 100%;
-  background-color: #f0f4f7;
-}
-
-/* 헤더 */
-header {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 80px;
-  background-color: #ffffff;
-  align-items: center;
-  box-sizing: border-box;
-  border: 0.5px solid #d6d6d6;
-}
-
-.logo {
-  margin-top: 25px;
-  margin-left: 30px;
-  max-width: 40%;
-  max-height: 40%;
-}
-
-/* 전체 사이드바 */
-nav {
-  position: absolute;
-  top: 80px;
-  left: 0;
-  width: 250px;
-  height: calc(100%);
-  /* height: 100vh; */
-  background-color: #3c4b64;
-}
-
-/* 첫번째 사이드바 */
-#first-sidebar {
-  position: absolute;
-  top: 0px;
-  width: 250px;
-  height: 100px;
-  background-color: #303c54;
+/* .user-breadcrumb {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 30px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: first baseline;
+  width: 180px;
+} */
+
+#user-first-breadcrumb {
+  margin-left: 55px;
+  font-size: 32px;
   font-weight: bold;
+  margin-right: 15px;
 }
 
-/* 두번째 사이드바 */
-#second-sidebar {
+#user-second-breadcrumb {
+  font-size: 14px;
+  color: gray;
+}
+
+#user-first-breadcrumb,
+#user-second-breadcrumb {
+  display: inline;
+}
+
+
+
+/* 컨테이너 박스 */
+#user-container-box {
+  padding: 20px 5%;
+  height: 800px;
+  min-height: 690px;
+  margin: 20px 0 auto;
+  margin-top: 50px;
+  margin-left: 55px;
+  border: 2px solid #d6d6d6;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   position: absolute;
-  top: 130px;
-  width: 250px;
-  height: 54px;
-  background-color: #3c4b64;
-  /* background-color: #798291; */
+  background-color: #ffffff;
+  min-width: 1520px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 16px;
+  flex-direction: column;
+}
+
+#user-inner-box {
   box-sizing: border-box;
-  padding: 10px;
-  cursor: pointer;
 }
 
-.fa-solid {
-  margin-right: 10px;
+/* 전체 유저 수 */
+#total-users {
+  width: 10%;
+  height: 20px;
+  float: left;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
-#second-sidebar:hover {
-  background-color: #798291;
+/* 검색창 */
+#user-search-container {
+  height: 20px;
+  float: right;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  box-sizing: border-box;
 }
 
-/* 세번째 사이드바 */
-#third-sidebar {
-  position: absolute;
-  top: 184px;
-  width: 250px;
-  height: 54px;
-  background-color: #3c4b64;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
+#total-users,
+#user-search-container {
+  display: inline;
 }
 
-#third-sidebar:hover {
-  background-color: #798291;
-}
-
-a:link,
-a:visited,
-a:active {
-  color: white;
-  text-decoration: none;
-}
-
-#app {
-  margin: 2em;
-  line-height: 1.5;
-  font-weight: 500;
-}
-
-a {
-  color: #009579;
-}
-
-footer {
-  bottom: 0;
+#user-search-box {
+  position: relative;
   width: 100%;
-  height: 80px;
-  background-color: #efefef;
-  box-sizing: border-box;
-  border: 1px solid #d6d6d6;
-  align-items: center;
-  justify-content: center;
+}
+
+#user-magnifier {
+  display: flex;
+  position: absolute;
+  top: 5px;
+  right: 0;
+  left: 20px;
+}
+
+#user-magnifier i {
+  display: inline-block;
+  position: absolute;
+  right: 0; /* 오른쪽 끝에 위치 */
+  font-size: 1.3em;
+}
+
+#user-searchInput {
+  width: 300px;
+  height: 30px;
+  font-size: 16px;
+  margin-left: 0;
+  border: solid 1px rgba(0, 0, 0, 0.8);
+}
+
+#user-searchInput::placeholder {
   font-size: 14px;
 }
 
-main {
-  position: absolute;
+.user-search-container input[type="text"] {
+  padding: 6px;
+  margin-top: 8px;
+  margin-left: 0;
+  font-size: 12px;
+  border: none;
+}
+
+#user-search-button {
+  cursor: pointer;
+}
+
+/* 유저 테이블 */
+table {
   width: 100%;
-  min-height: calc(100% - 160px);
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+}
+
+table {
+  clear: both;
+  width: 100%;
+  height: 400px;
+}
+
+thead th {
+  background-color: #efefef;
+  font-weight: bold;
+}
+
+td,
+th {
+  text-align: center;
+  padding: 8px;
+  /* height: calc(100% / 10); */
+}
+
+#user-my-table tbody tr {
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #ccc;
+}
+
+th {
+  background-color: #efefef;
+  color: #black;
+}
+
+#user-table-body td {
+  text-align: center;
+  height: 14px;
+}
+
+#user-table-body tr:hover {
+  background-color: #f5f5f5;
+}
+
+.user-col1 {
+  width: 5%;
+}
+.user-col2 {
+  width: 15%;
+}
+.user-col3 {
+  width: 20%;
+}
+
+/* 아래부터 수정 필요 */
+
+/* 회원 가입 */
+#register-button {
+  color: white;
+  background-color: #002b49;
+  cursor: pointer;
+  width: 70px; /* 가로 길이 */
+  height: 36px; /* 세로 길이 */
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8); /* 배경 어둡게 */
+}
+
+.modifyModal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto 40px;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%; /* 모달 너비 조정 */
+  max-width: 400px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); /* 그림자 효과 */
+}
+
+.modal-content p {
+  color: #b81414;
+  font-size: 12px;
+  text-align: left;
+}
+
+.input-container {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center; /* 입력 필드와 레이블을 세로 중앙 정렬 */
+  justify-content: flex-start;
+}
+
+.input-container label {
+  margin-right: 10px;
+  flex: 0 0 100px;
+  text-align: right;
+  font-size: 0.9em;
+}
+
+.input-container input::placeholder {
+  font-size: 0.75em; /* 텍스트 크기를 조절합니다. */
+}
+
+.input-container input {
+  padding: 8px;
+  margin-right: 10px; /* 간격 추가 */
+  flex: 3; /* 첫 번째 input 창을 제외하고 동적으로 크기 조정되도록 */
+}
+
+.input-container button {
+  padding: 3px 5px;
+  cursor: pointer; /* 커서 포인터 효과 */
+}
+
+#checkDuplicate,
+#togglePassword {
+  flex: 0 0 auto; /* 버튼의 너비를 자동으로 설정하여 고정되지 않도록 합니다. */
+}
+
+#checkDuplicate {
+  font-size: 0.5em; /* 텍스트 크기를 조절합니다. */
+}
+
+.modal-buttons button {
+  cursor: pointer; /* 커서 포인터 효과 */
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 40px;
+}
+
+#registercancelBtn {
+  flex-grow: 0; /* 버튼이 더 이상 확장되지 않도록 설정 */
+  width: 60px;
+  height: 25px;
+}
+
+#registerBtn {
+  flex-grow: 0; /* 버튼이 더 이상 확장되지 않도록 설정 */
+  margin-left: auto; /* 오른쪽으로 이동하여 우측에 위치하도록 설정 */
+  color: white;
+  background-color: #002b49;
+  width: 65px;
+  height: 25px;
+}
+
+#modifycancelBtn {
+  flex-grow: 0;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
+}
+
+#modifyBtn {
+  flex-grow: 0;
+  margin-left: auto;
+  color: white;
+  background-color: #002b49;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
+}
+
+#modifyCancelBtn {
+  flex-grow: 0;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
+}
+
+#modifyBtnConfirm {
+  flex-grow: 0;
+  margin-left: auto;
+  color: white;
+  background-color: #002b49;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
+}
+
+.modifyModal #modifyModal {
+  display: none; /* 기본적으로 숨김 */
+}
+
+.modifyModal[style="display: none"] + .modal {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+/* 회원정보 수정 */
+#my-table thead th i.fa-solid.fa-pen {
+  cursor: auto;
+}
+
+#user-table-body i.fa-solid.fa-pen {
+  cursor: pointer;
+}
+
+/* 회원 삭제 */
+#delete-area {
+  width: 5%;
+  height: 50px;
+  float: left;
+  margin-top: 25px;
+}
+
+#delete-button {
+  background-color: #ddd;
+  cursor: pointer;
+  width: 70px; /* 가로 길이 */
+  height: 36px; /* 세로 길이 */
+}
+
+#deleteModal {
+  display: none;
+  line-height: 1.5;
+}
+
+#deleteModal p {
+  font-size: 0.9em;
+  margin-bottom: 10px;
+}
+
+#deleteButton:hover {
+  background-color: lightblue;
+}
+
+#cancelDeleteBtn {
+  flex-grow: 0;
+  cursor: pointer;
+  width: 60px;
+  height: 25px;
+}
+
+#confirmDeleteBtn {
+  background-color: #b81414; /* 빨간색으로 배경색을 설정합니다. */
+  color: white; /* 텍스트 색상을 흰색으로 설정합니다. */
+  width: 60px;
+  height: 25px;
+}
+
+#bottom-controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 25px; /* 간격 조정을 위해 추가 */
+}
+
+/* 회원 등록 */
+#register-area {
+  margin-left:;
+  height: 50px;
+  float: right;
+  margin-top: 25px;
+}
+
+/* 페이지네이션 */
+.pagination {
+  width: 89%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #ffffff;
+  margin-top: 20px;
+}
+
+.pagination span {
+  color: #fff;
+  font-size: 1.2em;
+}
+
+.pagination i {
+  cursor: pointer;
+  margin: 0 1rem;
+}
+
+#numbers {
+  padding: 0;
+  margin: 0 2rem;
+  list-style-type: none;
+  display: flex;r
+}
+
+#numbers li a {
+  color: black;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  opacity: 0.7;
+}
+
+#numbers li a:hover {
+  opacity: 1;
+}
+
+#numbers li a.active {
+  opacity: 1;
+  background: #2387e5;
+  color: white;
+}
+
+#delete-area #register-area {
+  display: inline;
+  margin-top: 20px;
 }
